tests/custom/STARIS_2022/basic/partitions/partition-operator-errors/set-apart/stderr.expected
Error:
    set-apart.essence:4:38:
  |
4 | such that a = apart({2, 4, 6, 8, 9}, s)
  |                                      ^
Type error:
	Expected: partition from int
	Got: set of int

cat: *.solution: No such file or directory
